--- a/Layout/app/pug/base/base.pug
+++ b/Layout/app/pug/base/base.pug
@@ -1,6 +1,6 @@
 //- Перменные 
 block vars
-  - var siteTitle = 'Gravity';
+  - var siteTitle = 'To Do List App';
   - var lang = 'en';
   - var active = '0';
 
@@ -11,19 +11,11 @@ html(lang=lang)
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
-    //- Плагин owl-carousel
-    //- link(rel="stylesheet" href="../css/owl.carousel.css")
-    //- link(rel="stylesheet" href="../css/owl.theme.default.min.css")
-    link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous")
     link(rel="stylesheet" href="../css/style.min.css")
     //- Иконка сайта
-    link(rel="shortcut icon" href="../img/icons/favicon.jpg" type="image/jpg")
-    //- Вставляем переменную через интерполяцию текста
+    link(rel="shortcut icon" href="../img/icons/favicon.ico" type="image/jpg")
     title #{siteTitle}
   body 
     script(src="../js/main.js")
-    //- Плагин owl-carousel
-    //- script(src="../js/owl.carousel.min.js")
-    script(src="https://kit.fontawesome.com/1660e9b256.js" crossorigin="anonymous")
     //- block ключевое слово помогающее совместить две части кода в разных файлах
     block content 
