--- a/Layout/app/pug/base/footer.pug
+++ b/Layout/app/pug/base/footer.pug
@@ -2,3 +2,17 @@ include mixin
 footer.footer
   .container
     .row
+      //- section.create-element
+      //-   .create-element__container
+      //-       label.check
+      //-           button.create-element__btn
+      //-             img(src="./img/icons/create.svg", alt="create element button")
+      //-           .check__text.text Create New Item
+      section.task
+                .task__container
+                    label.check
+                        input(type="checkbox").check__input
+                        span
+                          a(href="#")
+                            img(src="./img/icons/create.svg", alt="create") 
+                        .check__text.text Create New Item
