--- a/Layout/app/pug/base/header.pug
+++ b/Layout/app/pug/base/header.pug
@@ -2,4 +2,36 @@ header.header
   .nav
     .container
       .row
-        
+        nav.nav__calendar-items
+          .nav__left
+            .nav__calendar-icon
+              .nav__month May
+              .nav__day 23
+            .nav__list-name.h1 Today
+          .nav__right
+            ul.nav__btns.menu
+              li.nav__list-btn
+                button
+                  svg(width="27" height="17" viewBox="0 0 27 17" xmlns="http://www.w3.org/2000/svg")
+                    rect(x="23.0881" y="0.618517" width="4.34871" height="17.8448" rx="1.925" transform="rotate(45 23.0881 0.618517)" fill="#C4C4C4" stroke="#C4C4C4" stroke-width="0.15")
+                    rect(x="0.926867" y="3.69324" width="4.34871" height="17.8448" rx="1.925" transform="rotate(-45 0.926867 3.69324)" fill="#C4C4C4" stroke="#C4C4C4" stroke-width="0.15")
+                ul.nav__list
+                  li.nav__lists-text
+                    a(href="#") Today
+                  li.nav__lists-text
+                    a(href="#") Tomorrow
+                  li.nav__lists-text
+                    a(href="#") Projects
+              li.nav__filter-btn
+                button
+                  svg(width="43" height="12" viewBox="0 0 43 12" xmlns="http://www.w3.org/2000/svg")
+                    ellipse(cx="6.0915" cy="6.23285" rx="5.77009" ry="5.76666" fill="#C4C4C4")
+                    ellipse(cx="21.4785" cy="6.23285" rx="5.77009" ry="5.76666" fill="#C4C4C4")
+                    ellipse(cx="36.8653" cy="6.23285" rx="5.77009" ry="5.76666" fill="#C4C4C4")
+                ul.nav__list
+                  li.nav__lists-text
+                    a(href="#") Completed
+                  li.nav__lists-text
+                    a(href="#") In Progress
+                  li.nav__lists-text
+                    a(href="#") Removed
