--- a/Layout/app/pug/base/index.pug
+++ b/Layout/app/pug/base/index.pug
@@ -2,7 +2,7 @@
 //- extends - воспринимается как шаблон
 extends base 
 block vars
-  - var siteTitle = 'CutSpace';
+  - var siteTitle = 'To Do List App';
   - var active = '0';
 include mixin
 
@@ -10,7 +10,7 @@ block content
   //-НЕ ЗАБЫВАЙ ПРО ВЛОЖЕННОСТЬ
   .wrapper
     include header
-    
     main.page
+      include ../blocks/taskList
       //- include ../blocks/
     include footer
