--- a/Layout/app/scss/base/style.scss
+++ b/Layout/app/scss/base/style.scss
@@ -3,7 +3,7 @@
 //Подключаем шщрифты
 //&display=swap &subnet=cyrillc-ext
 @import "fonts";
-@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,500;0,600;0,700;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 //Иконочный шрифт или спрайт
 // @import "icons";
 // Импортируем переменные
@@ -15,13 +15,12 @@ body {
   height: 100%;
   color: $colorText;
   font-family: $fontFamily;
-  background: url("../img/bg/bg.svg");
 }
 a {
   // Я наконец-то понял как пишется эта команда
   color: inherit;
   &:hover {
-    color: $colorBasic;
+    color: $colorMain;
   }
 }
 button {
@@ -43,26 +42,42 @@ button {
   @media (max-width: $md3+px) {
   }
 }
+.container {
+  width: 89.13vw;
+  margin: 0 auto;
+}
 //ОСНОВНАЯ СЕТКА-----------------------------------------------------------------
 .active {
 }
 .h1 {
+  font-weight: 700;
+  font-size: 64px;
+  line-height: (65 / 64) * 100%;
 }
 .h2 {
 }
 .h3 {
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 33px;
+  text-align: center;
+
+  color: #3d82eb;
 }
 .h4 {
 }
 .text {
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 42px;
+  letter-spacing: 0.02em;
 }
 .btn {
 }
-
 //Импортируем постоянные классы--------------------------------------------------
 @import "mixin";
 @import "ui";
 @import "header";
 @import "footer";
 //Импортируем классы этого проекта-----------------------------------------------
-// @import "../blocks/";
+@import "../blocks/taskList";
